--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "@popperjs/core": "^2.6.0",
+    "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.15.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
